# cBox

./: .gitignore  README.md  pyproject.toml  workbench_for_local_dev.py
.github/workflows/: ci.yml
cbox/: __init__.py  connbox.py  model.py
doc/: cboxProtcol.md  contributing.md
tests/: connbox_simulator.py  connbox_test.py
